<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="sakref.yohan.go4lunch.ui.fragments.MapsFragment"
        android:label="@string/title_mapview"
        tools:layout="@layout/fragment_maps" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="sakref.yohan.go4lunch.ui.fragments.ListViewFragment"
        android:label="@string/title_listview"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="sakref.yohan.go4lunch.ui.fragments.WorkmatesFragment"
        android:label="@string/title_workmates"
        tools:layout="@layout/fragment_notifications" />
</navigation>